[package]
name = "benben-clock"
version = "0.1.0"
description = "一个简易的番茄计时工具"
authors = ["you"]
license = "MIT"
repository = "https://github.com/willingcoderverytime/benben-clock.git"
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
chrono = "^0.4.38"
chrono-tz = "^0.10.0"
serde_json = "^1.0.128"
serde = { version = "^1.0.210", features = ["derive"] }
tauri = { version = "1.7.2", features = [] }
once_cell = { version = "^1.20.0" }
tokio = { version = "^1.40.0", features = ["full"] }
uuid = { version = "^1.10.0", features = ["v4"] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tracing-appender = "^0.2.3"
[dependencies.sea-orm]
features = ["debug-print", "sqlx-sqlite", "runtime-tokio-native-tls"]
version = "^1.1.0-rc.1" # sea-orm version

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
